Update copy on bios

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>Waves is a Raspberry Pi project that asks you to answer a personal question and then prints out the soundwaves as a gift for you to keep and decode forever. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. We were also featured on the RPI <a href=#>blog</a></p>
+                <p>Waves is a Raspberry Pi project that asks you to answer a personal question and then prints out the soundwaves as a gift for you to keep and decode forever. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
             </div>
         </div>
 
@@ -124,8 +124,8 @@
                 <a href=
                 'https://scene.knightlab.com/'target="_blank">
                 <h3>SceneVR</h3></a>
-                <p class="pub">Knight Lab Project</p>
-                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. It's still ongoing, but we're pretty darn excited about the beta version we have right now. Check it out by clicking on the image.</p>
+                <p class="pub">Knight Lab</p>
+                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. It's still ongoing, but we're pretty darn excited about the beta version we have right now. Check it out <a href="https://scene.knightlab.com/">here</a></p>
             </div>
         </div>
         <div class='parent'>
@@ -140,7 +140,7 @@
                 'http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii'target="_blank">
                 <h3>The Wrong Man</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Lead designer and developer of a story that hit more than 450,000 page views (2nd most viewed NBC specials story at the time). Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. </p>
+                <p>Lead designer and developer of a story that hit more than 450,000 page views (2nd most viewed NBC specials story at the time). Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. See it live <a href="http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii">here</a></p>
             </div>
         </div>
         <div class='parent'>
@@ -179,7 +179,7 @@
                 <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history" target="_blank">
                 <h3>A Party Divided</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Lead data researcher in this project that spanned both editorial, video, photo, and graphics teams. Collected and cleaned data for all data visualizations and charts in the project. Helped analyze and build charts using C3.js.</p>
+                <p>Lead data researcher in this project that spanned both editorial, video, photo, and graphics teams. Collected and cleaned data for all data visualizations and charts in the project. Helped analyze and build charts using C3.js. See it live <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history">here</a></p>
             </div>
         </div>
         <div class='parent'>
