Add doping athlete project and assets

--- a/index.html
+++ b/index.html
@@ -173,6 +173,26 @@
         </div>
         <div class='parent'>
             <div class="col">
+                <a href=
+                'https://euniceylee.github.io/doping-athletes/'target="_blank">
+                <img class='book' src=
+                "img/doping.jpg"></a>
+            </div>
+            <div class="detail">
+                <a href=
+                'https://euniceylee.github.io/doping-athletes/'target="_blank">
+                <h3>Olympic Athletes Who Doped</h3></a>
+                <p class="pub">Side Project</p>
+                <p>Wanted to practice creating and designing graphics using a narrative approach, so I mocked this prototype based off a dataset I found. Used HTML, CSS and JavaScript. Data notes and final prototype version found <a href="https://euniceylee.github.io/doping-athletes/">here</a></p>
+            </div>
+        </div>
+
+
+
+
+
+        <div class='parent'>
+            <div class="col">
               <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history" target="_blank">
                 <img class='book' src=
                 "img/TRUMP2.jpg"></a>
