--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 'https://github.com/mazhang2718/care-bot'target="_blank">
                 <h3>Carebot</h3></a>
                 <p class="pub">side project</p>
-                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. Uses the Yelp and Better Doctor APIs to narrow down the search. This project won the $1,000 Yelp cash prize for best use of their API. <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">Here's</a> how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
+                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. My buddy Matt and I built it over a weekend at a hackathon in April hosted by ProPublica, Better Doctor and Yelp. This project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
             </div>
         </div>
 
