--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 'https://scene.knightlab.com/'target="_blank">
                 <h3>SceneVR</h3></a>
                 <p class="pub">Knight Lab</p>
-                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. It's still ongoing, but we're pretty darn excited about the beta version we have right now. Check it out <a href="https://scene.knightlab.com/">here</a></p>
+                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. The project is still in beta version but recently <a href="https://www.knightfoundation.org/articles/11-ideas-win-journalism-360-challenge-on-immersive-storytelling">won $20,000</a> from the Knight Foundation Journalism 360 Challenge. Check it out <a href="https://scene.knightlab.com/">here</a></p>
             </div>
         </div>
         <div class='parent'>
