Update bio and Waves bio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! I'm a design-minded journalist and hobbyist developer at Northwestern University. My self-starter attitude comes from side projects where I explore the intersections of art, code, design and storytelling. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and an undergrad computer science researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently you can find me in Washington D.C. interning at Discovery Channel doing design research and data visualization. Oh, and some Alexa and Google Home skills too for Sharkweek. Past gigs include covering the elections for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and helping ProPublica improve their APIs. </p>
+          <p class="description">Hi there! I'm a design-minded journalist and hobbyist developer at Northwestern University. My self-starter attitude comes from side projects where I explore the intersections of art, code, design and storytelling. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a computer science researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently I'm hanging out in Washington D.C., interning at Discovery Channel doing design research and data visualization. Past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and improving ProPublica's APIs. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
@@ -94,7 +94,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>Waves is a Raspberry Pi project that asks you to answer a personal question and then prints out the soundwaves as a gift for you to keep and decode forever. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
+                <p>Waves is a Raspberry Pi project that can visualize and print the soundwaves of your laugh, or the answer to a personal question. The viz is our gift to the user as a physical remnant of the experience, plus something only the user can decode. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
             </div>
         </div>
 
