--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 'http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii'target="_blank">
                 <h3>The Wrong Man</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Lead designer and developer of a story that hit more than 450,000 page views (2nd most viewed NBC specials story at the time). Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. See it live <a href="http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii">here</a></p>
+                <p>Lead designer and developer of a story that hit more than 450,000 page views. Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. See it live <a href="http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii">here</a></p>
             </div>
         </div>
         <div class='parent'>
@@ -155,7 +155,7 @@
             <div class="detail">
                 <h3>Cartograms</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Designed NBC's first, original cartograms. Conducted in-depth research on the UX and design of cartograms, then sketched, prototyped, and pitched the final design idea. Proud to say that my design is now part of the internal newsroom's charting tool. They helped visualize how<a href="http://www.nbcnews.com/card/how-battleground-states-voted-past-elections-n632996"> battle states voted in past elections </a>and where<a href="http://www.nbcnews.com/card/where-team-usa-hails-n628491"> Team USA Rio Olympians hail from</a>.</p>
+                <p>Designed NBC's first cartograms for an internal newsroom charting tool. Responsible for research and UX/UI. Created sketches, mocks and prototypes. They helped visualize how<a href="http://www.nbcnews.com/card/how-battleground-states-voted-past-elections-n632996"> battle states voted in past elections </a>and where<a href="http://www.nbcnews.com/card/where-team-usa-hails-n628491"> Team USA Rio Olympians hail from</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -170,7 +170,7 @@
                 'http://www.nbcnews.com/storyline/team-refugees'target="_blank">
                 <h3>Olympic Team Refugees</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refugee status. This was a highly collaborative project between the editorial and graphics team. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
+                <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refugee status. This was a collaborative project between the editorial and graphics team. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -186,24 +186,6 @@
                 <h3>Olympic Athletes Who Doped</h3></a>
                 <p class="pub">Side Project</p>
                 <p>Wanted to practice creating and designing graphics using a narrative approach, so I mocked this prototype based off a dataset I found. Used HTML, CSS and JavaScript. Data notes and final prototype version found <a href="https://euniceylee.github.io/doping-athletes/">here</a></p>
-            </div>
-        </div>
-
-
-
-
-
-        <div class='parent'>
-            <div class="col">
-              <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history" target="_blank">
-                <img class='book' src=
-                "img/TRUMP2.jpg"></a>
-            </div>
-            <div class="detail">
-                <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history" target="_blank">
-                <h3>A Party Divided</h3></a>
-                <p class="pub">NBC News</p>
-                <p>Lead data researcher in this project that spanned both editorial, video, photo, and graphics teams. Collected and cleaned data for all data visualizations and charts in the project. Helped analyze and build charts using C3.js. See it live <a href="http://www.nbcnews.com/specials/donald-trump-republican-party/trump-history">here</a></p>
             </div>
         </div>
         <div class='parent'>
