Update bio (still need to add Aldente)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! I'm a design-minded journalist and hobbyist developer at Northwestern University. My self-starter attitude comes from side projects where I explore the intersections of art, code, design and storytelling. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a computer science researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently I'm hanging out in Washington D.C., interning at Discovery Channel doing design research and data visualization. Past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and improving ProPublica's APIs. </p>
+          <p class="description">Hi there! I'm a design-minded journalist and hobbyist developer at Northwestern University. I like to create work that explores the intersections of art, design, storytelling and code. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a computer science researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently I'm hanging out in Washington D.C., interning at Discovery Channel doing design research and creating Amazon Alexa skills. Past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and improving ProPublica's APIs. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
@@ -81,6 +81,7 @@
     </div>
 <!--  -->
     <div id="work-row">
+        <!-- Waves -->
         <h2>Favorite Projects</h2>
         <div class='parent'>
             <div class="col">
@@ -97,7 +98,23 @@
                 <p>Waves is a Raspberry Pi project that can visualize and print the soundwaves of your laugh, or the answer to a personal question. The viz is our gift to the user as a physical remnant of the experience, plus something only the user can decode. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
             </div>
         </div>
-
+        <!-- Aldente -->
+        <!-- <div class='parent'>
+            <div class="col">
+                <a href=
+                'https://github.com/euniceylee/aldente' target="_blank">
+                <img class='book' src=
+                "img/waves.jpg"></a>
+            </div>
+            <div class="detail">
+                <a href=
+                'https://github.com/euniceylee/aldente'target="_blank">
+                <h3>Aldente</h3></a>
+                <p class="pub">side project</p>
+                <p>A raspberry pi that prints your Trello cards like orders placed in a michelin chef's kitchen. Once complete, stab! Feel the satisfaction!</p>
+            </div>
+        </div> -->
+        <!-- Carebot -->
         <div class='parent'>
             <div class="col">
                 <a href=
@@ -223,7 +240,7 @@
             <div class="detail">
               <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
                 <h3>A Year of Terror in Iraq</h3></a>
-                <p class="pub">Personal Project</p>
+                <p class="pub">Side Project</p>
                 <p>I came across an article in the BCC explaining the biggest ISIS-led attack in Iraq around June 2016. I thought that the article could really use a benefit so I decided to practice my D3, Illustrator, and ai2tml skills to create a map version. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details. See it live <a href="https://iraq-a704c.firebaseapp.com/">here</a>.</p>
             </div>
         </div>
