Adds assets and content for Aldente

--- a/index.html
+++ b/index.html
@@ -81,6 +81,22 @@
     </div>
 <!--  -->
     <div id="work-row">
+      <!-- Aldente -->
+      <div class='parent'>
+          <div class="col">
+              <a href=
+              'https://github.com/euniceylee/aldente' target="_blank">
+              <img class='book' src=
+              "img/aldente.jpg"></a>
+          </div>
+          <div class="detail">
+              <a href=
+              'https://github.com/euniceylee/aldente'target="_blank">
+              <h3>Al dente</h3></a>
+              <p class="pub">side project</p>
+              <p>A raspberry pi that prints your Trello cards like orders placed in a Michelin chef's kitchen. Once complete, stab! My friend Pam and I made a tutorial for the <a href="https://twitter.com/wearecolorcoded">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10">here</a>. You can see it in action <a href="https://twitter.com/euniceylee/status/886945772960448513">here</a> and check out the <a href="https://github.com/euniceylee/aldente">code</a></p>
+          </div>
+      </div>
         <!-- Waves -->
         <h2>Favorite Projects</h2>
         <div class='parent'>
@@ -95,25 +111,9 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>Waves is a Raspberry Pi project that can visualize and print the soundwaves of your laugh, or the answer to a personal question. The viz is our gift to the user as a physical remnant of the experience, plus something only the user can decode. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
+                <p>A raspberry pi programmed to visualize and print the soundwaves of your laugh or the answer to one of three personal questions. The viz is a gift to the individual as a tangible remnant of the experience. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
             </div>
         </div>
-        <!-- Aldente -->
-        <!-- <div class='parent'>
-            <div class="col">
-                <a href=
-                'https://github.com/euniceylee/aldente' target="_blank">
-                <img class='book' src=
-                "img/waves.jpg"></a>
-            </div>
-            <div class="detail">
-                <a href=
-                'https://github.com/euniceylee/aldente'target="_blank">
-                <h3>Aldente</h3></a>
-                <p class="pub">side project</p>
-                <p>A raspberry pi that prints your Trello cards like orders placed in a michelin chef's kitchen. Once complete, stab! Feel the satisfaction!</p>
-            </div>
-        </div> -->
         <!-- Carebot -->
         <div class='parent'>
             <div class="col">
