Update Aldente's bio

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               'https://github.com/euniceylee/aldente'target="_blank">
               <h3>Al dente</h3></a>
               <p class="pub">side project</p>
-              <p>A raspberry pi that prints your Trello cards like orders placed in a Michelin chef's kitchen. Once complete, stab! My friend Pam and I made a tutorial for the <a href="https://twitter.com/wearecolorcoded">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10">here</a>. You can see it in action <a href="https://twitter.com/euniceylee/status/886945772960448513">here</a> and check out the <a href="https://github.com/euniceylee/aldente">code</a></p>
+              <p>A raspberry pi that prints your Trello cards like orders placed in a Michelin chef's kitchen. See it in action <a href="https://twitter.com/euniceylee/status/886945772960448513">here</a> and check out the <a href="https://github.com/euniceylee/aldente">code</a> A number of folks on Twitter wanted to know how to make this so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10">here</a>.</p>
           </div>
       </div>
         <!-- Waves -->
