Update various URLs

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               'https://github.com/euniceylee/aldente'target="_blank">
               <h3>Al dente</h3></a>
               <p class="pub">side project</p>
-              <p>A raspberry pi that prints your Trello cards like orders placed in a Michelin chef's kitchen. See it in action <a href="https://twitter.com/euniceylee/status/886945772960448513">here</a> and check out the <a href="https://github.com/euniceylee/aldente">code</a> A number of folks on Twitter wanted to know how to make this so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10">here</a>.</p>
+              <p>A raspberry pi that prints your Trello cards like orders placed in a Michelin chef's kitchen. See it in action <a href="https://twitter.com/euniceylee/status/886945772960448513" target="_blank">here</a> and check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a>. A number of folks on Twitter wanted to know how to make this so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>.</p>
           </div>
       </div>
         <!-- Waves -->
@@ -111,7 +111,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>A raspberry pi programmed to visualize and print the soundwaves of your laugh or the answer to one of three personal questions. The viz is a gift to the individual as a tangible remnant of the experience. You can read more about our design and development process <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href=#>blog</a></p>
+                <p>A raspberry pi programmed to visualize and print the soundwaves of your laugh or the answer to one of three personal questions. The viz is a gift to the individual as a tangible remnant of the experience. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a></p>
             </div>
         </div>
         <!-- Carebot -->
