GIFs!! So many GIFs!!

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href=
               'https://github.com/euniceylee/aldente' target="_blank">
               <img class='book' src=
-              "img/aldente.jpg"></a>
+              "img/finalexample.gif" width="350"></a>
           </div>
           <div class="detail">
               <a href=
@@ -104,7 +104,7 @@
                 <a href=
                 'https://github.com/euniceylee/waves' target="_blank">
                 <img class='book' src=
-                "img/waves.jpg"></a>
+                "img/waves.gif" width="350"></a>
             </div>
             <div class="detail">
                 <a href=
@@ -120,7 +120,7 @@
                 <a href=
                 'https://github.com/mazhang2718/care-bot' target="_blank">
                 <img class='book' src=
-                "img/carebot.jpg"></a>
+                "img/finalcarebot.gif" width="350"></a>
             </div>
             <div class="detail">
                 <a href=
@@ -130,10 +130,6 @@
                 <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. My buddy Matt and I built it over a weekend at a hackathon in April hosted by ProPublica, Better Doctor and Yelp. This project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
             </div>
         </div>
-
-
-
-
         <div class='parent'>
             <div class="col">
                 <a href=
