--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               'https://github.com/euniceylee/aldente'target="_blank">
               <h3>Al dente</h3></a>
               <p class="pub">side project</p>
-              <p>A raspberry pi that prints your Trello cards like orders placed in a Michelin chef's kitchen. See it in action <a href="https://twitter.com/euniceylee/status/886945772960448513" target="_blank">here</a> and check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a>. A number of folks on Twitter wanted to know how to make this so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>.</p>
+              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This was a fun raspberry pi project that I made with my friend Pam. Check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a>. A number of folks on Twitter wanted to know how to make this so we wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>.</p>
           </div>
       </div>
         <!-- Waves -->
@@ -111,7 +111,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>A raspberry pi programmed to visualize and print the soundwaves of your laugh or the answer to one of three personal questions. The viz is a gift to the individual as a tangible remnant of the experience. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a>. Waves made its debut at the Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a></p>
+                <p>A raspberry pi that records people’s spoken responses to personal questions and prints them in the form of a sound wave as a gift for being truthful. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a> and check out the code <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Spring 2017 Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a></p>
             </div>
         </div>
         <!-- Carebot -->
@@ -127,7 +127,7 @@
                 'https://github.com/mazhang2718/care-bot'target="_blank">
                 <h3>Carebot</h3></a>
                 <p class="pub">side project</p>
-                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. My buddy Matt and I built it over a weekend at a hackathon in April hosted by ProPublica, Better Doctor and Yelp. This project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
+                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses only offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathn hosted by ProPublica, Better Doctor and Yelp. This project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
             </div>
         </div>
         <div class='parent'>
