--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <a href=
                 'https://scene.knightlab.com/' target="_blank">
                 <img class='book' src=
-                "img/scene.png"></a>
+                "img/scenevr.mp4" width="350"></a>
             </div>
             <div class="detail">
                 <a href=
