--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>A raspberry pi that records people’s spoken responses to personal questions and prints them in the form of a sound wave as a gift for being truthful. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a> and check out the code <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Spring 2017 Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a></p>
+                <p>A raspberry pi that records people’s spoken responses to personal questions and prints them in the form of a sound wave as a gift for being truthful. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a> and check out the code <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Spring 2017 Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a>.</p>
             </div>
         </div>
         <!-- Carebot -->
@@ -123,7 +123,7 @@
                 'https://github.com/mazhang2718/care-bot'target="_blank">
                 <h3>Carebot</h3></a>
                 <p class="pub">side project</p>
-                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses only offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathn hosted by ProPublica, Better Doctor and Yelp. This project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
+                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathon hosted by ProPublica, Better Doctor and Yelp. Our project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
             </div>
         </div>
         <div class='parent'>
@@ -138,7 +138,7 @@
                 'https://scene.knightlab.com/'target="_blank">
                 <h3>SceneVR</h3></a>
                 <p class="pub">Knight Lab</p>
-                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. I spent 6 months working on this tool as a UI/UX designer. The project is still in beta version but recently <a href="https://www.knightfoundation.org/articles/11-ideas-win-journalism-360-challenge-on-immersive-storytelling">won $20,000</a> from the Knight Foundation Journalism 360 Challenge. Check it out <a href="https://scene.knightlab.com/">here</a></p>
+                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. I spent 6 months working on this tool as a UI/UX designer. The project is still in beta version but recently <a href="https://www.knightfoundation.org/articles/11-ideas-win-journalism-360-challenge-on-immersive-storytelling">won $20,000</a> from the Knight Foundation Journalism 360 Challenge. Check it out <a href="https://scene.knightlab.com/">here</a>.</p>
             </div>
         </div>
         <div class='parent'>
@@ -194,7 +194,7 @@
                 'https://euniceylee.github.io/doping-athletes/'target="_blank">
                 <h3>Olympic Athletes Who Doped</h3></a>
                 <p class="pub">Side Project</p>
-                <p>Wanted to practice creating and designing graphics using a narrative approach, so I mocked this prototype based off a dataset I found. Used HTML, CSS and JavaScript. Data notes and final prototype version found <a href="https://euniceylee.github.io/doping-athletes/">here</a></p>
+                <p>Wanted to practice creating and designing graphics using a narrative approach, so I mocked this prototype based off a dataset I found about Olympic athletes caught for doping. Used HTML, CSS and JavaScript. Data notes and final prototype version found <a href="https://euniceylee.github.io/doping-athletes/">here</a>.</p>
             </div>
         </div>
         <div class='parent'>
