Removes extra URL on project images, and adds SceneVR autoplaying video

--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
       <!-- Aldente -->
       <div class='parent'>
           <div class="col">
-              <a href=
-              'https://github.com/euniceylee/aldente' target="_blank">
               <img class='book' src=
-              "img/finalexample.gif" width="350"></a>
+              "img/finalexample.gif" width="350">
           </div>
           <div class="detail">
               <a href=
@@ -97,10 +95,8 @@
         <!-- Waves -->
         <div class='parent'>
             <div class="col">
-                <a href=
-                'https://github.com/euniceylee/waves' target="_blank">
                 <img class='book' src=
-                "img/waves.gif" width="350"></a>
+                "img/waves.gif" width="350">
             </div>
             <div class="detail">
                 <a href=
@@ -113,10 +109,8 @@
         <!-- Carebot -->
         <div class='parent'>
             <div class="col">
-                <a href=
-                'https://github.com/mazhang2718/care-bot' target="_blank">
                 <img class='book' src=
-                "img/finalcarebot.gif" width="350"></a>
+                "img/finalcarebot.gif" width="350">
             </div>
             <div class="detail">
                 <a href=
@@ -128,10 +122,9 @@
         </div>
         <div class='parent'>
             <div class="col">
-                <a href=
-                'https://scene.knightlab.com/' target="_blank">
-                <img class='book' src=
-                "img/scenevr.mp4" width="350"></a>
+                <video width= "350" autoplay loop>
+                  <source src="img/scenevr.mp4" type="video/mp4">
+                </video>
             </div>
             <div class="detail">
                 <a href=
@@ -143,10 +136,8 @@
         </div>
         <div class='parent'>
           <div class="col">
-              <a href=
-              'http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii' target="_blank">
               <img class='book' src=
-              "img/thewrongman-cover.jpg"></a>
+              "img/thewrongman-cover.jpg">
           </div>
             <div class="detail">
                 <a href=
@@ -169,8 +160,6 @@
         </div>
         <div class='parent'>
             <div class="col">
-                <a href=
-                'http://www.nbcnews.com/storyline/team-refugees'target="_blank">
                 <img class='book' src=
                 "img/yusra.png"></a>
             </div>
@@ -184,8 +173,6 @@
         </div>
         <div class='parent'>
             <div class="col">
-                <a href=
-                'https://euniceylee.github.io/doping-athletes/'target="_blank">
                 <img class='book' src=
                 "img/doping.jpg"></a>
             </div>
@@ -210,8 +197,6 @@
   </div>
         <div class='parent'>
             <div class="col">
-                <a href=
-                'https://jour383-final.firebaseapp.com/' target="_blank">
                 <img class='book' src=
                 "img/cold2.jpg"></a>
             </div>
@@ -225,9 +210,8 @@
         </div>
         <div class='parent'>
             <div class="col">
-              <a href='https://iraq-a704c.firebaseapp.com/' target="_blank">
                 <img class='book' src=
-                "img/iraq-isis.png"></a>
+                "img/iraq-isis.png">
             </div>
             <div class="detail">
               <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
