--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class='parent'>
             <div class="col">
-                <video width= "350" autoplay loop>
+                <video width= "350" autoplay loop controls muted>
                   <source src="img/scenevr.mp4" type="video/mp4">
                 </video>
             </div>
