Adds a GIF for SceneVR. Replaces the old video

--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
         </div>
         <div class='parent'>
             <div class="col">
-                <video width= "350" autoplay loop controls muted>
-                  <source src="img/scenevr.mp4" type="video/mp4">
-                </video>
+              <img class='book' src=
+              "img/scenevrfinal.gif" width="350">
             </div>
             <div class="detail">
                 <a href=
