--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               'https://github.com/euniceylee/aldente'target="_blank">
               <h3>Al dente</h3></a>
               <p class="pub">side project</p>
-              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This was a fun raspberry pi project that I made with my friend Pam. Check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a>. A number of folks on Twitter wanted to know how to make this so we wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>.</p>
+              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! The idea for this project came out of a long night of binge watching Chef's Table on Netflix. I really liked how every order had an ephemeral beginning and end - from the moment it gets printed and read to the kitchen, to when it gets delivered and stabbed. I wanted to apply that same idea to my to-do lists, and impaling every item seemed like the right move. This project resonated with a lot of folks on Twitter, so so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself!</p> 
           </div>
       </div>
         <!-- Waves -->
