--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! I'm a design-minded journalist and hobbyist developer at Northwestern University. I like to create work that explores the intersections of art, design, storytelling and code. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a computer science researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. I just wrapped up my summer at Discovery Channel as a design research intern. Other past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and improving ProPublica's APIs. </p>
+          <p class="description">Hi there! I'm a design-minded storyteller and hobbyist developer at Northwestern University. I like to create work that explores the intersections of art, design, marketing and code. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a computer science researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. I just wrapped up my summer at Discovery Channel as a design research intern. Other past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and improving ProPublica's APIs. </p>
     </div>
     <div id="words-row">
         <h2>Favorite Words</h2>
