--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               'https://github.com/euniceylee/aldente'target="_blank">
               <h3>Al dente</h3></a>
               <p class="pub">side project</p>
-              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! The idea for this project came up after I started noticing the cinematography in the Netflix show Chef's Table. I really liked how every restaurant order had an ephemeral beginning and end - from the moment it gets delivered to the kitchen to when the food gets delivered and the order gets stabbed. I wanted to apply that same idea to my to-do lists, and impaling every item seemed like the right move. This project resonated with a lot of folks on Twitter, so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself.</p>
+              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This project resonated with a lot of folks on Twitter (people seem to really like impaling pieces of paper), so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself.</p>
           </div>
       </div>
         <!-- Waves -->
