--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 'https://github.com/euniceylee/waves'target="_blank">
                 <h3>Waves</h3></a>
                 <p class="pub">side project</p>
-                <p>A raspberry pi that records people’s spoken responses to personal questions and prints them in the form of a sound wave as a gift for being truthful. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a> and check out the code <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Spring 2017 Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a>.</p>
+                <p>A raspberry pi that records people’s spoken responses to personal questions and prints them in the form of a sound wave as a gift for being truthful. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a> and check out the code <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Spring 2017 Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a> We were also interviewed and part of a two page spread of the September 2017 MagPi issue, the official Raspberry Pi Magazine! See pages 32 and 33 <a href="https://www.raspberrypi.org/magpi-issues/MagPi61.pdf">here</a>.</p>
             </div>
         </div>
         <!-- Carebot -->
